tests/result_compile_failed/mismatched_return_type_should_fail_to_compile.rs
use macrofied_toolbox::result;

fn main() -> Result<(), String> {
    result! {
        @when foo()?;
        @ok   "will not compile";
    }

    Ok(())
}

fn foo() -> Result<usize, &'static str> {
    Ok(42)
}